--- a/nginx/deployment.yaml
+++ b/nginx/deployment.yaml
@@ -13,3 +13,16 @@ spec:
           image: nginx:1.17.1-alpine
           ports:
           - containerPort: 80
+
+          volumeMounts:
+          - mountPath: /etc/nginx/conf.d
+            name: nginx-conf
+            readOnly: true
+
+      volumes:
+        - name: nginx-conf
+          configMap:
+            name: nginx-conf
+            items:
+              - key: nginx.conf
+                path: nginx.conf
