--- a/mysql/deployment.yaml
+++ b/mysql/deployment.yaml
@@ -19,6 +19,8 @@ spec:
       containers:
         - name: mysql-server
           image: mysql:5.7
+          args:
+            - "--ignore-db-dir=lost+found"
           env:
           - name: MYSQL_ROOT_PASSWORD
             value: root
@@ -26,14 +28,10 @@ spec:
           - containerPort: 3306
 
           volumeMounts:
-          - mountPath: /etc/nginx/conf.d
-            name: nginx-conf
-            readOnly: true
+          - name: mysql-persistent-storage
+            mountPath: /var/lib/mysql
 
       volumes:
-        - name: nginx-conf
-          configMap:
-            name: nginx-conf
-            items:
-              - key: nginx.conf
-                path: nginx.conf
+        - name: mysql-persistent-storage
+          persistentVolumeClaim:
+              claimName: mysql-pv-claim
