--- a/nginx/deployment.yaml
+++ b/nginx/deployment.yaml
@@ -1,16 +1,23 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: hello-nginx
+  name: nginx
+  labels:
+    app: nginx
 spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: nginx
   template:
     metadata:
       labels:
-        app: hello-nginx
+        app: nginx
     spec:
       containers:
         - name: nginx
           image: nginx:1.17.1-alpine
+          command: ["/bin/sh","-c","echo 'Code.education Rocks!' > /usr/share/nginx/html/index.html; nginx -g 'daemon off;'"]
           ports:
           - containerPort: 80
 
